--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,70 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* 基本 */
 body{
-    background-color: aqua;
+    @apply bg-slate-900
+}
+.web-title{
+    @apply text-white text-center text-3xl mt-10
+}
+.div-container{
+    @apply w-[500px] mx-auto p-5 mt-5 flex flex-col bg-amber-300 rounded-md shadow-lg
+}
+/* button */
+.primary-button{
+    @apply border-2 px-5 py-2 rounded-md shadow-md bg-orange-400
+}
+/* form */
+.form{
+    @apply w-full mb-10;
+}
+.form-control{
+    @apply mb-5 font-extrabold
+}
+.top-form{
+    @apply flex justify-between
+}
+.form-control input{
+    @apply rounded-md
+}
+.form-submit{
+    @apply flex justify-end
+}
+/* #title{
+    @apply 
+} */
+#people{
+    @apply w-[80px]
+}
+#description{
+    @apply w-full h-[150px] rounded-md
+}
+/* projects */
+.projects ul{
+    @apply w-full min-h-[200px] mb-10
+}
+.projects header{
+    @apply bg-slate-800 text-white text-center
+}
+.project-item{
+    @apply p-5 border-2 shadow-lg
+}
+.project-item h2{
+    @apply text-2xl
+}
+.project-item h3{
+    @apply text-slate-700 mb-5
+}
+.droppable{
+    @apply opacity-50
+}
+.drag-active{
+    @apply border-transparent
+}
+#active-projects-list{
+    @apply bg-orange-400
+}
+#finished-projects-list{
+    @apply bg-teal-500
 }
